Added docker-compose file

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": " NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": " NODE_ENV=production node dist/index.js",
+  "dev": " NODE_ENV=development tsx server/index.ts",
+  "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+  "start": " NODE_ENV=production node dist/index.js",
+  "pm2:start": "pm2 start ecosystem.config.js",
+  "pm2:stop": "pm2 stop ecosystem.config.js",
+  "pm2:restart": "pm2 restart ecosystem.config.js",
+  "pm2:logs": "pm2 logs --lines 200",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
